<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorOnPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/btn_seis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonVentas"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btn_siete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonAbono"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btn_ocho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonVendedor"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btn_nueve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonArticulos"
        android:textSize="24sp" />


</LinearLayout>


